@@ -5,9 +5,23 @@ dependencies {
     implementation("com.github.kjetilv.uplift:uplift-json-gen:0.1.1-SNAPSHOT")
     implementation("com.github.kjetilv.uplift:uplift-flogs:0.1.1-SNAPSHOT")
     implementation("com.github.kjetilv.uplift:uplift-kernel:0.1.1-SNAPSHOT")
-    annotationProcessor("com.github.kjetilv.uplift:uplift-json-gen:0.1.1-SNAPSHOT")
+    implementation("com.restfb:restfb:2025.14.0")
 
-    implementation("com.restfb:restfb:2025.9.0") {
-        exclude(group = "org.slf4j")
-    }
+    annotationProcessor("com.github.kjetilv.uplift:uplift-json-gen:0.1.1-SNAPSHOT")
+}
+
+tasks.compileJava {
+    options.compilerArgs.addAll(
+        listOf(
+            "--add-reads", "taninim.fb=ALL-UNNAMED"
+        )
+    )
+}
+
+tasks.compileTestJava {
+    options.compilerArgs.addAll(
+        listOf(
+            "--add-reads", "taninim.fb=ALL-UNNAMED"
+        )
+    )
 }
